[gd_scene load_steps=30 format=3 uid="uid://cpxr8f6vacmqt"]

[ext_resource type="Script" path="res://level/coffee/coffee.gd" id="1_b76l1"]
[ext_resource type="Texture2D" uid="uid://bfahy8003euh2" path="res://level/coffee/sprites/bg.png" id="1_n0lo3"]
[ext_resource type="Texture2D" uid="uid://bpn3w5gdvji4y" path="res://level/coffee/sprites/coffee_machine.png" id="3_8w54k"]
[ext_resource type="Texture2D" uid="uid://mqdvipjdtpac" path="res://level/coffee/sprites/coffee_streams/empty.png" id="3_xy8ay"]
[ext_resource type="Texture2D" uid="uid://d1tt0ropqamgo" path="res://level/coffee/sprites/coffee_streams/start.png" id="4_14rqc"]
[ext_resource type="Texture2D" uid="uid://v1ner85fe70b" path="res://level/coffee/sprites/coffee_streams/third.png" id="5_c8ino"]
[ext_resource type="Texture2D" uid="uid://byyflbuvbsfpd" path="res://level/coffee/icons/button_down.png" id="5_ejncl"]
[ext_resource type="Texture2D" uid="uid://ciefmmf6lfb38" path="res://level/coffee/sprites/coffee_streams/half.png" id="6_eab6i"]
[ext_resource type="Texture2D" uid="uid://dbdj6irh3gabd" path="res://level/coffee/icons/button_left.png" id="6_g0f7p"]
[ext_resource type="Texture2D" uid="uid://y2i7ujufb4hj" path="res://level/coffee/icons/sticky_note.png" id="7_3d6il"]
[ext_resource type="Texture2D" uid="uid://d4gbwrs8tuxt3" path="res://level/coffee/sprites/coffee_streams/two_thirds.png" id="7_u70e6"]
[ext_resource type="Texture2D" uid="uid://cvhmokng8hfni" path="res://level/coffee/sprites/coffee_streams/full.png" id="8_3droe"]
[ext_resource type="FontFile" uid="uid://b5wc8u1b2jhql" path="res://level/coffee/fonts/betterwork/Betterworks.otf" id="8_s0m11"]
[ext_resource type="Texture2D" uid="uid://bx00tp7k6h4n5" path="res://level/coffee/icons/speech_bubble.png" id="9_62spy"]
[ext_resource type="Texture2D" uid="uid://bj2kcumd73mou" path="res://level/coffee/sprites/coffee_streams/cup/full.png" id="9_n6x1b"]
[ext_resource type="Texture2D" uid="uid://crg18rq7uojd3" path="res://level/coffee/sprites/coffee_streams/cup/start_end.png" id="9_nxpe8"]
[ext_resource type="Texture2D" uid="uid://pke57eugxtq2" path="res://level/coffee/sprites/coffee_streams/start_end.png" id="9_qdec7"]
[ext_resource type="FontFile" uid="uid://c5e6jd020r2fe" path="res://level/coffee/fonts/shiny-marker/Shiny Marker Regular.ttf" id="10_0hgcj"]
[ext_resource type="Texture2D" uid="uid://b1bsblibsfoli" path="res://level/coffee/sprites/coffee_streams/end_mid.png" id="10_hu6ih"]
[ext_resource type="Script" path="res://level/coffee/speech_bubble.gd" id="11_2nl58"]
[ext_resource type="Texture2D" uid="uid://co066homvrayc" path="res://level/coffee/sprites/coffee_streams/end.png" id="11_h15da"]
[ext_resource type="Texture2D" uid="uid://cy31pgqj8k30y" path="res://level/coffee/sprites/display.png" id="11_r4rh2"]
[ext_resource type="FontFile" uid="uid://c6snkbqy5evdg" path="res://level/coffee/fonts/digital-dream/DIGITALDREAMFAT.ttf" id="11_x4j6t"]
[ext_resource type="Texture2D" uid="uid://bgtcgif22rdef" path="res://level/coffee/sprites/coffee_cup.png" id="25_kii2q"]
[ext_resource type="AudioStream" uid="uid://qrmb5ilyvoua" path="res://level/coffee/audio/button.wav" id="31_gt6xq"]
[ext_resource type="AudioStream" uid="uid://d2p343rh884m3" path="res://level/coffee/audio/coffee_pouring_fade_out.wav" id="32_ycqrj"]
[ext_resource type="AudioStream" uid="uid://dincjrymkh0r5" path="res://level/coffee/audio/KaffeemaschineBackroungloop.wav" id="33_gouby"]
[ext_resource type="AudioStream" uid="uid://crkm6rsjcqbkj" path="res://level/coffee/audio/schnurren.wav" id="34_igoc4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pvwsf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xy8ay")
}, {
"duration": 1.0,
"texture": ExtResource("4_14rqc")
}, {
"duration": 1.0,
"texture": ExtResource("5_c8ino")
}, {
"duration": 15.0,
"texture": ExtResource("6_eab6i")
}, {
"duration": 15.0,
"texture": ExtResource("9_n6x1b")
}, {
"duration": 10.0,
"texture": ExtResource("6_eab6i")
}, {
"duration": 3.0,
"texture": ExtResource("4_14rqc")
}, {
"duration": 2.0,
"texture": ExtResource("6_eab6i")
}, {
"duration": 5.0,
"texture": ExtResource("9_nxpe8")
}, {
"duration": 1.0,
"texture": ExtResource("3_xy8ay")
}, {
"duration": 1.0,
"texture": ExtResource("3_xy8ay")
}],
"loop": false,
"name": &"cup",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xy8ay")
}, {
"duration": 1.0,
"texture": ExtResource("4_14rqc")
}, {
"duration": 1.0,
"texture": ExtResource("5_c8ino")
}, {
"duration": 1.0,
"texture": ExtResource("6_eab6i")
}, {
"duration": 1.0,
"texture": ExtResource("7_u70e6")
}, {
"duration": 55.0,
"texture": ExtResource("8_3droe")
}, {
"duration": 2.0,
"texture": ExtResource("9_qdec7")
}, {
"duration": 2.0,
"texture": ExtResource("10_hu6ih")
}, {
"duration": 5.0,
"texture": ExtResource("11_h15da")
}, {
"duration": 1.0,
"texture": ExtResource("3_xy8ay")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="Coffee" type="Node2D"]
scale = Vector2(1000, 1000)
script = ExtResource("1_b76l1")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(0.61, -3.19)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n0lo3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 32.0
offset_right = 1926.0
offset_bottom = 1092.0

[node name="machine" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 436.0
offset_top = -37.0
offset_right = 1524.0
offset_bottom = 1078.0
texture = ExtResource("3_8w54k")
expand_mode = 1
stretch_mode = 4

[node name="pour_coffee_button" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 2
anchor_left = -2.76
anchor_top = -2.88
anchor_right = -0.48
offset_left = 5903.16
offset_top = 3346.8
offset_right = 1589.68
offset_bottom = 320.0
ignore_texture_size = true
stretch_mode = 5

[node name="adjust_beans_button" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 2
offset_left = 723.0
offset_top = 266.0
offset_right = 793.0
offset_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("5_ejncl")
ignore_texture_size = true
stretch_mode = 5

[node name="adjust_bar_button" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 2
offset_left = 1017.0
offset_top = 271.0
offset_right = 1087.0
offset_bottom = 341.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("5_ejncl")
ignore_texture_size = true
stretch_mode = 5

[node name="adjust_type_button" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 2
offset_left = 1145.0
offset_top = 270.0
offset_right = 1215.0
offset_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("6_g0f7p")
ignore_texture_size = true
stretch_mode = 5

[node name="sticky_note" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1387.0
offset_top = 57.0
offset_right = 1925.0
offset_bottom = 470.0
texture = ExtResource("7_3d6il")
expand_mode = 1
stretch_mode = 4

[node name="information" type="Label" parent="CanvasLayer/Control/sticky_note"]
layout_mode = 0
offset_left = 64.0
offset_top = 56.0
offset_right = 358.0
offset_bottom = 275.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_s0m11")
theme_override_font_sizes/font_size = 14
text = "08:00 AM - 2 be, 15 ba, 1 bt
10:00 AM - 1 be, 10 ba, 2 bt
12:00 PM - 1 be, 20 ba, 3 bt
01:00 PM - 3 be, 10 ba, 1 bt
03:00 PM - 2 be, 15 ba, 1 bt
05:00 PM - 1 be, 20 ba, 3 bt"

[node name="speech_bubble" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 80.0
offset_top = 64.0
offset_right = 440.0
offset_bottom = 446.0
texture = ExtResource("9_62spy")
expand_mode = 1
stretch_mode = 4
script = ExtResource("11_2nl58")

[node name="humans_response" type="Label" parent="CanvasLayer/Control/speech_bubble"]
layout_mode = 0
offset_left = 43.0
offset_top = 77.0
offset_right = 335.0
offset_bottom = 261.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_0hgcj")
theme_override_font_sizes/font_size = 36
text = "I'm so tired..."
autowrap_mode = 3

[node name="coffee_cup" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 641.0
offset_top = 700.0
offset_right = 955.0
offset_bottom = 905.0
texture_normal = ExtResource("25_kii2q")
ignore_texture_size = true
stretch_mode = 4

[node name="PouringCoffee" type="AnimatedSprite2D" parent="CanvasLayer/Control"]
position = Vector2(830, 750.5)
scale = Vector2(0.9325, 0.976667)
sprite_frames = SubResource("SpriteFrames_pvwsf")

[node name="display" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1577.0
offset_top = -29.0
offset_right = 1911.0
offset_bottom = 45.0
texture_normal = ExtResource("11_r4rh2")
ignore_texture_size = true
stretch_mode = 0

[node name="clock" type="Label" parent="CanvasLayer/Control/display"]
layout_mode = 0
offset_left = 15.0
offset_top = 12.0
offset_right = 322.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("11_x4j6t")
theme_override_font_sizes/font_size = 48
text = "12:36 PM"

[node name="winning screen" type="TextureButton" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_top = -34.0
offset_right = 1929.0
offset_bottom = 1076.0
texture_normal = ExtResource("11_r4rh2")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Control/winning screen"]
layout_mode = 0
offset_left = 144.0
offset_top = 127.0
offset_right = 1766.0
offset_bottom = 981.0
theme_override_font_sizes/font_size = 64
text = "Woohooo!    :-D
You did it, your human is not tired anymore.

» Press anywhere to proceed «"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pouring_coffee" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("32_ycqrj")
volume_db = 15.0

[node name="background" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_gouby")
volume_db = -32.0
autoplay = true

[node name="winning_purring" type="AudioStreamPlayer" parent="."]
stream = ExtResource("34_igoc4")
volume_db = 20.0

[node name="button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_gt6xq")

[connection signal="mouse_entered" from="CanvasLayer/Control/pour_coffee_button" to="." method="_on_pour_coffee_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/pour_coffee_button" to="." method="_on_pour_coffee_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/pour_coffee_button" to="." method="_on_pour_coffee_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/adjust_beans_button" to="." method="_on_adjust_beans_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/adjust_beans_button" to="." method="_on_adjust_beans_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/adjust_beans_button" to="." method="_on_adjust_beans_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/adjust_bar_button" to="." method="_on_adjust_bar_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/adjust_bar_button" to="." method="_on_adjust_bar_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/adjust_bar_button" to="." method="_on_adjust_bar_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/adjust_type_button" to="." method="_on_adjust_type_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/adjust_type_button" to="." method="_on_adjust_type_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/adjust_type_button" to="." method="_on_adjust_type_button_pressed"]
[connection signal="hidden" from="CanvasLayer/Control/speech_bubble" to="." method="_on_speech_bubble_hidden"]
[connection signal="mouse_entered" from="CanvasLayer/Control/coffee_cup" to="." method="_on_coffee_cup_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/coffee_cup" to="." method="_on_coffee_cup_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/coffee_cup" to="." method="_on_coffee_cup_pressed"]
[connection signal="animation_finished" from="CanvasLayer/Control/PouringCoffee" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="mouse_entered" from="CanvasLayer/Control/display" to="." method="_on_display_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/display" to="." method="_on_display_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/display" to="." method="_on_display_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/winning screen" to="." method="_on_winning_screen_pressed"]
[connection signal="finished" from="pouring_coffee" to="." method="_on_pouring_coffee_finished"]
[connection signal="finished" from="background" to="." method="_on_background_finished"]
[connection signal="finished" from="winning_purring" to="." method="_on_winning_purring_finished"]
[connection signal="finished" from="button" to="." method="_on_button_finished"]
